# MLOps-Project-1

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  application.py  blog.md  pyproject.toml  requirements.txt  setup.md
config/: config.yaml  gcp_config.py  model_params.py
custom_jenkins/: Dockerfile
docs/: 1_database_setup.md  2_project_setup.md  3_data_ingestion.md  4_data_processing.md  5_model_training.md  6_experiment_tracking.md  7_training_pipeline.md  8_user_app.md  9_cicd_deployment.md
notebook/: notebook.ipynb  notebook.md
pipeline/: training_pipeline.py
src/: custom_exception.py  data_ingestion.py  data_preprocessing.py  logger.py  model_training.py
static/: style.css
templates/: index.html
utils/: common_functions.py
