[project]
name = "MLOPS-PROJECT-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "AbulFaiz Bangi" }
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "google-cloud-storage>=3.1.0",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "mlflow>=2.22.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "xgboost>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[build-system]
requires = [
  "setuptools>=61.0",
  "wheel"
]
build-backend = "setuptools.build_meta"
